# solenoide

./: CMakeLists.txt  Derivadas del campo de un solenoide.ipynb  README.md  magnetic_data_no_z_correction.csv  main.cpp
